changed character to varchar in person table

--- a/Views/Person/Index.cshtml
+++ b/Views/Person/Index.cshtml
@@ -37,9 +37,8 @@
                 @Html.DisplayFor(modelItem => item.phone)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "UpdatePerson", new {id=item.id}) |
+                @Html.ActionLink("Delete", "RemovePerson", new {  id=item.id })
             </td>
         </tr>
 }
